--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="hero-right">
                 <div class="bg-skew"></div>
-                <img src="./assets/main sec image.jpg" alt="Ramesh" />
+                <img src="./assets/Banner.jpg" alt="Ramesh" />
             </div>
         </section>
     </div>
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-img">
-                    <img src="./assets/IMG_2202.jpg" alt="Profile Picture">
+                    <img src="./assets/Main img.jpg" alt="Profile Picture">
                 </div>
                 <div class="about-content">
                     <h5 class="section-subtitle">MY INTRODUCTION</h5>
