--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <a href="https://github.com/baladarshan21/Bikeshop--.aspnet" target="_blank">View Project</a>
                 </div>
             </div>
-            
+            <!-- Add more cards if needed -->
         </div>
     </section>
 
@@ -298,5 +298,3 @@
 </body>
 
 </html>
-
-
