--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bala Darshan | Portfolio</title>
-    <link rel="icon" sizes="48x48" href="./assets/logoo.png">
+    <link rel="icon" sizes="48x48" href="./assets/logo2.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -298,3 +298,4 @@
 </body>
 
 </html>
+
