--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bala Darshan | Portfolio</title>
-    <link rel="icon" sizes="48x48" href="./assets/logo2.png">
+    <link rel="icon" sizes="48x48" href="./assets/logoo.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -34,7 +34,7 @@
                 <h1>Hi, I am <span>Bala Darshan</span> <br>I build responsive & modern websites.</h1>
                 <div class="buttons">
                     <a href="#" class="btn primary">Hire me</a>
-                    <a href="./assets/Bala_Darshan_Resume.pdf" class="btn outline" download>Download CV</a>
+                    <a href="./assets/BalaDarshan_Resume2.pdf" class="btn outline" download>Download CV</a>
                 </div>
             </div>
             <div class="hero-right">
@@ -298,6 +298,3 @@
 </body>
 
 </html>
-
-
-
