--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="hero-right">
                 <div class="bg-skew"></div>
-                <img src="./assets/Banner.jpg" alt="Ramesh" />
+                <img src="./assets/IMG-20250923-WA0013.jpg" alt="Ramesh" />
             </div>
         </section>
     </div>
