--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1>Hi, I am <span>Bala Darshan</span> <br>I build responsive & modern websites.</h1>
                 <div class="buttons">
                     <a href="#" class="btn primary">Hire me</a>
-                    <a href="./assets/Bala Darshan Resume.pdf" class="btn outline" download>Download CV</a>
+                    <a href="./assets/Resume.pdf" class="btn outline" download>Download CV</a>
                 </div>
             </div>
             <div class="hero-right">
